@startuml
'https://plantuml.com/class-diagram



WindowApp <|-- DebtorList
WindowApp <|-- IncomingEmails
CSVReader <|-- BigCSVCutter
SeleniumParser <|-- Status
IncomingEmails <|-- WithKadastrList

class BigCSVCutter {
    + BigCSVCutter(String pathname);
    # void createFolder(String path);
    # void extractInFolder(File folder);
}
class SeleniumParser {
    - WebDriver driver;
    - ParsingSrcDstFiles srcDstFiles;
    + void setSrcAndDst(String srcPath);
    + void setSrcAndDst(String srcPath, String dstPath);
    + void setSrcAndDst(CSVReader srcFile);
    + void startParse();
    + void sendKadastrs();
}
class CSVReader{
    # String pathname;
    # File csvFile;
    # ArrayList<ArrayList<String>> words = null;
    # ArrayList<String> lines;
}

class DebtorList {
    - String ownerName
    - String payerName
    - Long accruedMoney
    - Long returnedMoney
    - Date createDateOfPayment
    - Date uploadDateOfPayment
    - Boolean kadastr

}
class WindowApp{
    - String kadastrNumber
    - String personalAddress
    - String personalAccount
    - Long personalAccount
    - Integer square
    - Integer emailCounter
    - Integer personalID
    - Date createDate
    - Date uploadDate
}
class IncomingEmails{
     - String emailAddress
     - String emailSender
     - String emailReceiver
}
class WithKadastrList{
    - CSVReader source;
    - CSVReader distination;
    - Date createdTime;
}

enum Status {
SUCCESS
SENT TO PROCESSING
NO KADASTRS
ERROR
}

@enduml